resource wrap bug fix when two icentical files are uploaded

--- a/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
+++ b/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
@@ -864,6 +864,17 @@ a.sbac-grid-layout {
   }
 }
 
+.page-node-edit.node-type-resource #modalContent {
+  overflow: none !important;
+
+  #modal-title{
+    white-space: pre-wrap;
+    overflow: visible;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
 /* -----------------------------------------
    Node
    ----------------------------------------- */
